Fix potential alignment issues for large grid items

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -57,6 +57,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     width: var(--item-width);
     min-height: var(--item-height);
@@ -80,7 +81,13 @@
     width: var(--item-icon-size);
     height: var(--item-icon-size);
     object-fit: contain;
-    margin: auto;
+    margin-bottom: 5px;
+}
+
+.skills.grid .entry > .name {
+    word-wrap: break-word;
+    width: 100%;
+    text-align: center;
 }
 
 .skills.grid .entry > .meter {
